<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/welcomeTextView" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome!"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/buttonDeposit" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deposit_button"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/buttonWithdrawal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/withdrawal_button"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/buttonBalanceInquiry" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/balance_inquiry_button"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/buttonTransactionHistory" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_history_button"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/buttonLogout" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_button"/>

</LinearLayout>